--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -42,67 +42,121 @@
 	</div><br>
 	<!--記事-->
 	<div class="topicbox" style="padding-bottom:5px;">
-      <div class="topic">
-        <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー SiteMap ー </span>
-        </center>
-      </div>
-    </div>
-    <br>
-
-    <div class="sitemappagebox">
-    <a href="../index.html" class="more">TOP</a><br><br>
-
-    <a href="../index.html#1" class="more" id="articles">記事</a>
-    <a href="pc.html" class="more" id="pc" style="float: right;">自分のパソコンを守ろう！</a><br><br><br>
-    <a href="pc.html#1" class="more2" style="float: right;">ばばば</a><br><br><br>
-    <a href="pc.html#2" class="more2" id="twobox" style="float: right;">ばばば</a><br><br><br>
-
-    <a href="priv.html" class="more" id="priv" style="float: right;">個人情報を守ろう！</a><br><br><br>
-    <a href="priv.html#1" class="more2" style="float: right;">SNSでの個人情報</a><br><br><br>
-    <a href="priv.html#2" class="more2" style="float: right;">その他の個人情報</a><br><br><br>
-
-    <a href="badsite.html" class="more" id="badsite" style="float: right;">悪質サイトに気をつけよう！</a><br><br><br>
-    <a href="badsite.html#1" class="more2" style="float: right;">フィッシング詐欺サイト</a><br><br><br>
-    <a href="badsite.html#2" class="more2" style="float: right;">ワンクリック詐欺サイト</a><br><br><br>
-    <a href="badsite.html#3" class="more2" style="float: right;">偽のウイルス対策サイト</a><br><br><br>
-    <a href="badsite.html#4" class="more2" style="float: right;">偽物のサイト</a><br><br><br>
-
-    <a href="sns.html" class="more" id="sns" style="float: right;">SNSを正しく使おう！</a><br><br><br>
-    <a href="sns.html#1" class="more2" style="float: right;">位置情報問題</a><br><br><br>
-    <a href="sns.html#2" class="more2" style="float: right;">詐欺問題</a><br><br><br>
-    <a href="sns.html#3" class="more2" style="float: right;">偽情報・誤報問題</a><br><br><br>
-    <a href="sns.html#4" class="more2" style="float: right;">中傷問題</a><br><br><br>
-
-    <a href="com.html" class="more" id="com" style="float: right;">会社の情報を守ろう！</a><br><br><br>
-    <a href="com.html#1" class="more2" style="float: right;">ばばば</a><br><br><br>
-    <a href="com.html#2" class="more2" style="float: right;">ばばば</a><br><br><br>
-
-    <a href="iot.html" class="more" id="iot" style="float: right;">IoTにもセキュリティ？</a><br><br><br>
-    <a href="iot.html#1" class="more2" style="float: right;">IoTの問題</a><br><br><br>
-    <a href="iot.html#2" class="more2" style="float: right;">最近のセキュリティ研究</a><br><br><br>
-
-    <a href="cyo.html" class="more" id="cyo" style="float: right;">著作権を学ぼう！</a><br><br><br>
-    <a href="cyo.html#1" class="more2" style="float: right;">著作物の利用</a><br><br><br>
-    <a href="cyo.html#2" class="more2" style="float: right;">違法ダウンロード</a><br><br><br><br>
-
-    <a href="tour.html" class="more" style="float: left;">サイトツアー</a><br><br><br><br>
-
-    <a href="quiz.html" class="more" style="float: left;">クイズ</a><br><br><br><br>
-
-    <a href="whatis.html" class="more" style="float: left;">InternetSecurityとは</a>
-    <a href="whatis.html#1" class="more" style="float: right;">InternetSecurityとは</a><br><br><br>
-    <a href="whatis.html#2" class="more" style="float: right;">サイト紹介</a><br><br><br><br>
-
-    <a href="info.html" class="more" style="float: left;">サイト情報</a>
-    <a href="info.html#1" class="more" style="float: right;">推奨環境</a><br><br><br>
-    <a href="info.html#2" class="more" style="float: right;">参考文献</a><br><br><br>
-    <a href="info.html#3" class="more" style="float: right;">素材利用</a><br><br><br>
-    <a href="info.html#4" class="more" style="float: right;">お問い合わせ</a><br><br><br><br>
-
-    <a href="eng.html" class="more" style="float: none;">English</a>
-
-    </div>
+		<div class="topic">
+			<center>
+				<span class="topiceng" style="border-bottom: solid 1px #5E5E5E;">ー SiteMap ー</span>
+			</center>
+		</div>
+	</div><br>
+	<div class="sitemappagebox">
+		<a class="more" href="../index.html">TOP</a><br>
+		<br>
+		<a class="more" href="../index.html#1" id="articles">記事</a> <a class="more" href="pc.html" id="pc" style="float: right;">自分のパソコンを守ろう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="pc.html#1" style="float: right;">ばばば</a><br>
+		<br>
+		<br>
+		<a class="more2" href="pc.html#2" id="twobox" style="float: right;">ばばば</a><br>
+		<br>
+		<br>
+		<a class="more" href="priv.html" id="priv" style="float: right;">個人情報を守ろう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="priv.html#1" style="float: right;">SNSでの個人情報</a><br>
+		<br>
+		<br>
+		<a class="more2" href="priv.html#2" style="float: right;">その他の個人情報</a><br>
+		<br>
+		<br>
+		<a class="more" href="badsite.html" id="badsite" style="float: right;">悪質サイトに気をつけよう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="badsite.html#1" style="float: right;">フィッシング詐欺サイト</a><br>
+		<br>
+		<br>
+		<a class="more2" href="badsite.html#2" style="float: right;">ワンクリック詐欺サイト</a><br>
+		<br>
+		<br>
+		<a class="more2" href="badsite.html#3" style="float: right;">偽のウイルス対策サイト</a><br>
+		<br>
+		<br>
+		<a class="more2" href="badsite.html#4" style="float: right;">偽物のサイト</a><br>
+		<br>
+		<br>
+		<a class="more" href="sns.html" id="sns" style="float: right;">SNSを正しく使おう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="sns.html#1" style="float: right;">位置情報問題</a><br>
+		<br>
+		<br>
+		<a class="more2" href="sns.html#2" style="float: right;">詐欺問題</a><br>
+		<br>
+		<br>
+		<a class="more2" href="sns.html#3" style="float: right;">偽情報・誤報問題</a><br>
+		<br>
+		<br>
+		<a class="more2" href="sns.html#4" style="float: right;">中傷問題</a><br>
+		<br>
+		<br>
+		<a class="more" href="com.html" id="com" style="float: right;">会社の情報を守ろう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="com.html#1" style="float: right;">ばばば</a><br>
+		<br>
+		<br>
+		<a class="more2" href="com.html#2" style="float: right;">ばばば</a><br>
+		<br>
+		<br>
+		<a class="more" href="iot.html" id="iot" style="float: right;">IoTにもセキュリティ？</a><br>
+		<br>
+		<br>
+		<a class="more2" href="iot.html#1" style="float: right;">IoTの問題</a><br>
+		<br>
+		<br>
+		<a class="more2" href="iot.html#2" style="float: right;">最近のセキュリティ研究</a><br>
+		<br>
+		<br>
+		<a class="more" href="cyo.html" id="cyo" style="float: right;">著作権を学ぼう！</a><br>
+		<br>
+		<br>
+		<a class="more2" href="cyo.html#1" style="float: right;">著作物の利用</a><br>
+		<br>
+		<br>
+		<a class="more2" href="cyo.html#2" style="float: right;">違法ダウンロード</a><br>
+		<br>
+		<br>
+		<br>
+		<a class="more" href="tour.html" style="float: left;">サイトツアー</a><br>
+		<br>
+		<br>
+		<br>
+		<a class="more" href="quiz.html" style="float: left;">クイズ</a><br>
+		<br>
+		<br>
+		<br>
+		<a class="more" href="whatis.html" style="float: left;">InternetSecurityとは</a> <a class="more" href="whatis.html#1" style="float: right;">InternetSecurityとは</a><br>
+		<br>
+		<br>
+		<a class="more" href="whatis.html#2" style="float: right;">サイト紹介</a><br>
+		<br>
+		<br>
+		<br>
+		<a class="more" href="info.html" style="float: left;">サイト情報</a> <a class="more" href="info.html#1" style="float: right;">推奨環境</a><br>
+		<br>
+		<br>
+		<a class="more" href="info.html#2" style="float: right;">参考文献</a><br>
+		<br>
+		<br>
+		<a class="more" href="info.html#3" style="float: right;">素材利用</a><br>
+		<br>
+		<br>
+		<a class="more" href="info.html#4" style="float: right;">お問い合わせ</a><br>
+		<br>
+		<br>
+		<br>
+		<a class="more" href="eng.html" style="float: none;">English</a>
+	</div>
 	<table id="one" style="border: 0px solid black; border-top: 1px solid #5E5E5E; position: absolute;"></table>
 	<table id="after" style="border: 0px solid black; border-left: 1px solid #5E5E5E; position: absolute;"></table>
 	<table id="two" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 5.15%; position: absolute;"></table>
@@ -112,61 +166,63 @@
 	<table id="six" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 5.15%; position: absolute;"></table>
 	<table id="seven" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 5.15%; position: absolute;"></table>
 	<table id="eight" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 5.15%; position: absolute;"></table>
-
 	<table id="one-one" style="border: 0px solid black; border-left: 1px solid #5E5E5E; position: absolute;"></table>
 	<table id="one-two" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 2.575%; position: absolute;"></table>
-	<table id="one-three" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 2.575%; position: absolute;"></table>
-	<!-- サイト構成 -->
-	<div class="sitekousei"><br>
-      <div class="siteboxall">
-      <div class="sitebox1">
-        <a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
-        &nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
-        &nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
-      </div>
-      <div class="sitebox2"><br>
-        &nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
-        &nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
-      </div>
-      <div class="sitebox3"><br>
-        &nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
-        &nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
-      </div>
-      <div class="sitebox4"><br>
-        &nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
-        &nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
-        &nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
-      </div>
-      </div>
-    </div>
-	<!-- topボタン -->
+	<table id="one-three" style="border: 0px solid black; border-top: 1px solid #5E5E5E; width: 2.575%; position: absolute;"></table><!-- サイト構成 -->
+	<div class="sitekousei">
+		<br>
+		<div class="siteboxall">
+			<div class="sitebox1">
+				<a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
+				&nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
+				&nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
+			</div>
+			<div class="sitebox2">
+				<br>
+				&nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
+				&nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
+			</div>
+			<div class="sitebox3">
+				<br>
+				&nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br>
+				<br>
+				&nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
+			</div>
+			<div class="sitebox4">
+				<br>
+				&nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
+				&nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
+				&nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
+				&nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
+			</div>
+		</div>
+	</div><!-- topボタン -->
 	<center>
 		<a class="totop"><img onclick="$('body, html').animate({scrollTop: 0}, 400, 'swing');" src="../img/totop.png"></a>
 	</center><!-- フッター -->
