--- a/pages/whatis.html
+++ b/pages/whatis.html
@@ -1,154 +1,148 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>Internet Securityとは何か</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <script src="../jquery.js"></script>
-    <script src="../info.js"></script>
-    <script src="../scroll.js"></script>
-  </head>
-  <body>
-    <!-- グローバルナビ -->
-    <div class="head">
-      <div class="topiconbox">
-        <div class="topicon">
-          <h1>
-            <a href="../index.html">
-              <img src="../img/topicon.png" alt="Internet Security" width="240px" height="100px">
-            </a>
-          </h1>
-        </div>
-      </div>
-      <div class="topnavbox">
-        <nav class="topnav">
-          <ul>
-            <li class="topbutton">
-              <a href="#">
-                <span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span>
-              </a>
-            </li>
-            <li class="topbutton">
-              <a href="sitemap.html">
-                <span style="border-bottom: solid 3px #ffffff;">サイトマップ</span>
-              </a>
-            </li>
-            <li class="topbutton">
-              <a href="info.html">
-                <span style="border-bottom: solid 3px #ffffff;">サイト情報</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="topengbox">
-        <a href="eng.html" class="topeng">English</a>
-      </div>
-    </div>
-    <br>
-    <!--記事-->
-    <center>
-      <div class="pagebox">
-        <div class="pagetop"><a name="1">インターネットセキュリティ</a></div>
-        <br>
-        <center>
-          <div class="pagearticlebox">インターネットセキュリティとはコンピューターを
-            <br>
-            <a style="color: red;">コンピュータウイルス</a>、
-            <a style="color: red;">不正アクセス</a>、
-            <a style="color: red;">不正利用</a>、
-            <a style="color: red;">詐欺</a>などから守ることです。
-            <center>
-              <img src="../img/example.png" width="85%" style="padding-top:5px;">
-            </center>
-          </div>
-        </center>
-        <div class="pagetop"><a name="2">サイト紹介</a></div>
-        <br>
-        <center>
-          <div class="pagearticlebox">今日の社会では、コンピュータやスマートフォンが普及し、子供またはコンピュータへの知識がない人でも
-            <a style="color: red;">気軽</a>にインターネットにアクセスできるようになりました。
-            <br>
-            <br>しかし、情報セキュリティへの
-            <a style="color: red;">意識</a>は未だ低いままではないでしょうか。今のままのセキュリティへの意識で十分なのでしょうか。
-            <br>
-            <br>オレオレ詐欺や盗難の対策をするのと同じくらい、情報セキュリティへ意識を向け、
-            <a style="color: red;">対策</a>をすることはとても重要なのです。
-            <br>
-            <br>インターネット上にはコンピュータウイルス、乗っ取り、悪意のあるサイトなど、様々な
-            <a style="color: red;">脅威</a>があります。しかし、それら全てを知り、対策を取るのは簡単なことではありません。
-            <br>
-            <br>最近ではランサムウェア(ウイルスの１種)による
-            <a style="color: red;">世界規模</a>での被害も話題になりました。
-            <br>
-            <br>重要なOSのアップデートを怠ったり、
-            <a style="color: red;">簡単なパスワード</a>を設定したり、パスワードを使いまわしたりしていないでしょうか？
-            <br>
-            <br>このサイトで様々な
-            <a style="color: red;">知識</a>を得てもらい、役立てて欲しいのです。
-          </div>
-        </center>
-      </div>
-    </center>
-    <!-- サイト構成 -->
-    <div class="sitekousei"><br>
-      <div class="siteboxall">
-      <div class="sitebox1">
-        <a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
-        &nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
-        &nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
-      </div>
-      <div class="sitebox2"><br>
-        &nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
-        &nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
-      </div>
-      <div class="sitebox3"><br>
-        &nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
-        &nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
-      </div>
-      <div class="sitebox4"><br>
-        &nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
-        &nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
-        &nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
-      </div>
-      </div>
-    </div>
-    <!-- topボタン -->
-    <center>
-      <a class="totop">
-        <img src="../img/totop.png" onClick="$('body, html').animate({scrollTop: 0}, 400, 'swing');">
-      </a>
-    </center>
-    <!-- フッター -->
-    <footer class="footer">
-      <p class="cr">Copyright 2017 Internet Security </p>
-    </footer>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<title>Internet Securityとは何か</title>
+	<link href="../style.css" rel="stylesheet" type="text/css">
+	<script src="../jquery.js">
+	</script>
+	<script src="../info.js">
+	</script>
+	<script src="../scroll.js">
+	</script>
+</head>
+<body>
+	<!-- グローバルナビ -->
+	<div class="head">
+		<div class="topiconbox">
+			<div class="topicon">
+				<h1><a href="../index.html"><img alt="Internet Security" height="100px" src="../img/topicon.png" width="240px"></a></h1>
+			</div>
+		</div>
+		<div class="topnavbox">
+			<nav class="topnav">
+				<ul>
+					<li class="topbutton">
+						<a href="#"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<div class="topengbox">
+			<a class="topeng" href="eng.html">English</a>
+		</div>
+	</div><br>
+	<!--記事-->
+	<center>
+		<div class="pagebox">
+			<div class="pagetop">
+				<a id="1" name="1">インターネットセキュリティ</a>
+			</div><br>
+			<center>
+				<div class="pagearticlebox">
+					インターネットセキュリティとはコンピューターを<br>
+					<a style="color: red;">コンピュータウイルス</a>、 <a style="color: red;">不正アクセス</a>、 <a style="color: red;">不正利用</a>、 <a style="color: red;">詐欺</a>などから守ることです。
+					<center>
+						<img src="../img/example.png" style="padding-top:5px;" width="85%">
+					</center>
+				</div>
+			</center>
+			<div class="pagetop">
+				<a id="2" name="2">サイト紹介</a>
+			</div><br>
+			<center>
+				<div class="pagearticlebox">
+					今日の社会では、コンピュータやスマートフォンが普及し、子供またはコンピュータへの知識がない人でも <a style="color: red;">気軽</a>にインターネットにアクセスできるようになりました。<br>
+					<br>
+					しかし、情報セキュリティへの <a style="color: red;">意識</a>は未だ低いままではないでしょうか。今のままのセキュリティへの意識で十分なのでしょうか。<br>
+					<br>
+					オレオレ詐欺や盗難の対策をするのと同じくらい、情報セキュリティへ意識を向け、 <a style="color: red;">対策</a>をすることはとても重要なのです。<br>
+					<br>
+					インターネット上にはコンピュータウイルス、乗っ取り、悪意のあるサイトなど、様々な <a style="color: red;">脅威</a>があります。しかし、それら全てを知り、対策を取るのは簡単なことではありません。<br>
+					<br>
+					最近ではランサムウェア(ウイルスの１種)による <a style="color: red;">世界規模</a>での被害も話題になりました。<br>
+					<br>
+					重要なOSのアップデートを怠ったり、 <a style="color: red;">簡単なパスワード</a>を設定したり、パスワードを使いまわしたりしていないでしょうか？<br>
+					<br>
+					このサイトで様々な <a style="color: red;">知識</a>を得てもらい、役立てて欲しいのです。
+				</div>
+			</center>
+			
+			<hr noshade width="70%">
+			<center>
+				次のページ
+			</center>
+			<center>
+				<a class="nextpage" href="iot.html">IoTにもセキュリティ？</a>
+			</center><br>
+		</div>
+	</center>
+	<!-- サイト構成 -->
+	<div class="sitekousei">
+		<br>
+		<div class="siteboxall">
+			<div class="sitebox1">
+				<a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
+				&nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
+				&nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
+			</div>
+			<div class="sitebox2">
+				<br>
+				&nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
+				&nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
+			</div>
+			<div class="sitebox3">
+				<br>
+				&nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br>
+				<br>
+				&nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
+			</div>
+			<div class="sitebox4">
+				<br>
+				&nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
+				&nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
+				&nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
+				&nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
+			</div>
+		</div>
+	</div><!-- topボタン -->
+	<center>
+		<a class="totop"><img onclick="$('body, html').animate({scrollTop: 0}, 400, 'swing');" src="../img/totop.png"></a>
+	</center><!-- フッター -->
+	<footer class="footer">
+		<p class="cr">Copyright 2017 Internet Security</p>
+	</footer>
+</body>
 </html>
