--- a/pages/info.html
+++ b/pages/info.html
@@ -1,237 +1,229 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>サイト情報</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <script src="../jquery.js"></script>
-    <script src="../info.js"></script>
-    <script src="../scroll.js"></script>
-  </head>
-  <body>
-    <!-- グローバルナビ -->
-    <div class="head">
-      <div class="topiconbox">
-        <div class="topicon">
-          <h1>
-            <a href="../index.html">
-              <img src="../img/topicon.png" alt="Internet Security" width="240px" height="100px">
-            </a>
-          </h1>
-        </div>
-      </div>
-      <div class="topnavbox">
-        <nav class="topnav">
-          <ul>
-            <li class="topbutton">
-              <a href="whatis.html">
-                <span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span>
-              </a>
-            </li>
-            <li class="topbutton">
-              <a href="sitemap.html">
-                <span style="border-bottom: solid 3px #ffffff;">サイトマップ</span>
-              </a>
-            </li>
-            <li class="topbutton">
-              <a href="info.html">
-                <span style="border-bottom: solid 3px #ffffff;">サイト情報</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="topengbox">
-        <a href="eng.html" class="topeng">English</a>
-      </div>
-    </div>
-    <br>
-    <!-- 対応OS -->
-    <div class="topicbox" style="padding-bottom:5px;">
-      <div class="topic">
-        <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"><a name="1">ー System ー</a></span>
-        </center>
-        <center>
-          <span class="topicjpn">推奨環境</span>
-        </center>
-      </div>
-    </div>
-    <center>
-      <div class="buttonsy">
-        <img class="ieb" onclick="ieClick();" src="../img/ie-top.png">
-        <img class="meb" onclick="meClick();" src="../img/me-top.png">
-        <img class="sab" onclick="saClick();" src="../img/sa-top.png">
-        <img class="gcb" onclick="gcClick();" src="../img/gc-top.png">
-      </div>
-    </center>
-    <div class="systems">
-      <center>
-        <img class="ie active" src="../img/ie.png" width="90%" height="90%">
-      </center>
-      <center>
-        <img class="me" src="../img/me.png" width="90%" height="90%">
-      </center>
-      <center>
-        <img class="sa" src="../img/sa.png" width="90%" height="90%">
-      </center>
-      <center>
-        <img class="gc" src="../img/gc.png" width="90%" height="90%">
-      </center>
-    </div>
-    <br>
-    <center>
-      <img src="../img/sp.png" width="90%" height="90%">
-    </center>
-    <br>
-    <!--参考資料 -->
-    <div class="topicbox" style="padding-bottom:5px;">
-      <div class="topic">
-        <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"><a name="2">ー Bibliography ー</a></span>
-        </center>
-        <center>
-          <span class="topicjpn">参考文献</span>
-        </center>
-      </div>
-    </div>
-    <center>
-      <table border="0" style="border-collapse: collapse; width:75%;" bordercolor="gray">
-        <thead>
-          <tr bgcolor="#00a2ff">
-            <th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
-              <center>サイト名</center>
-            </th>
-            <th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
-              <center>利用先</center>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr bgcolor="#d3ebff">
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr>
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr bgcolor="#d3ebff">
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-        </tbody>
-      </table>
-    </center>
-    <!-- 素材利用 -->
-    <div class="topicbox" style="padding-bottom:5px;">
-      <div class="topic">
-        <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"><a name="3">ー Materials ー</a></span>
-        </center>
-        <center>
-          <span class="topicjpn">素材利用</span>
-        </center>
-      </div>
-    </div>
-    <center>
-      <table border="0" style="border-collapse: collapse; width:75%;" bordercolor="gray">
-        <thead>
-          <tr bgcolor="#61D836">
-            <th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
-              <center>サイト名</center>
-            </th>
-            <th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
-              <center>利用先</center>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr bgcolor="#D7F6CE">
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr>
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-          <tr bgcolor="#D7F6CE">
-            <td style="text-align:left">未記入</td>
-            <td style="text-align:left">未記入</td>
-          </tr>
-        </tbody>
-      </table>
-    </center>
-    <!-- サイト構成 -->
-    <div class="sitekousei"><br>
-      <div class="siteboxall">
-      <div class="sitebox1">
-        <a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
-        &nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
-        &nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
-      </div>
-      <div class="sitebox2"><br>
-        &nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
-        &nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
-      </div>
-      <div class="sitebox3"><br>
-        &nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
-        
-        &nbsp;<a href="tour.html" style="color: white;font-weight: bold;">■サイトツアー</a><br><br>
-        
-        &nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
-      </div>
-      <div class="sitebox4"><br>
-        &nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
-        &nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br><br>
-        &nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
-      </div>
-      </div>
-    </div>
-    <!-- topボタン -->
-    <center>
-      <a class="totop">
-        <img src="../img/totop.png" onClick="$('body, html').animate({scrollTop: 0}, 400, 'swing');">
-      </a>
-    </center>
-    <!-- フッター -->
-    <footer class="footer">
-      <p class="cr">Copyright 2017 Internet Security </p>
-    </footer>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<title>サイト情報</title>
+	<link href="../style.css" rel="stylesheet" type="text/css">
+	<script src="../jquery.js">
+	</script>
+	<script src="../info.js">
+	</script>
+	<script src="../scroll.js">
+	</script>
+</head>
+<body>
+	<!-- グローバルナビ -->
+	<div class="head">
+		<div class="topiconbox">
+			<div class="topicon">
+				<h1><a href="../index.html"><img alt="Internet Security" height="100px" src="../img/topicon.png" width="240px"></a></h1>
+			</div>
+		</div>
+		<div class="topnavbox">
+			<nav class="topnav">
+				<ul>
+					<li class="topbutton">
+						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<div class="topengbox">
+			<a class="topeng" href="eng.html">English</a>
+		</div>
+	</div><br>
+	<!-- 対応OS -->
+	<div class="topicbox" style="padding-bottom:5px;">
+		<div class="topic">
+			<center>
+				<span class="topiceng" style="border-bottom: solid 1px #5E5E5E;"><a id="1" name="1">ー System ー</a></span>
+			</center>
+			<center>
+				<span class="topicjpn">推奨環境</span>
+			</center>
+		</div>
+	</div>
+	<center>
+		<div class="buttonsy"><img class="ieb" onclick="ieClick();" src="../img/ie-top.png"> <img class="meb" onclick="meClick();" src="../img/me-top.png"> <img class="sab" onclick="saClick();" src="../img/sa-top.png"> <img class="gcb" onclick="gcClick();" src="../img/gc-top.png"></div>
+	</center>
+	<div class="systems">
+		<center>
+			<img class="ie active" height="90%" src="../img/ie.png" width="90%">
+		</center>
+		<center>
+			<img class="me" height="90%" src="../img/me.png" width="90%">
+		</center>
+		<center>
+			<img class="sa" height="90%" src="../img/sa.png" width="90%">
+		</center>
+		<center>
+			<img class="gc" height="90%" src="../img/gc.png" width="90%">
+		</center>
+	</div><br>
+	<center>
+		<img height="90%" src="../img/sp.png" width="90%">
+	</center><br>
+	<!--参考資料 -->
+	<div class="topicbox" style="padding-bottom:5px;">
+		<div class="topic">
+			<center>
+				<span class="topiceng" style="border-bottom: solid 1px #5E5E5E;"><a id="2" name="2">ー Bibliography ー</a></span>
+			</center>
+			<center>
+				<span class="topicjpn">参考文献</span>
+			</center>
+		</div>
+	</div>
+	<center>
+		<table border="0" style="border-collapse: collapse; width:75%;">
+			<thead>
+				<tr bgcolor="#00A2FF">
+					<th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
+						<center>
+							サイト名
+						</center>
+					</th>
+					<th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
+						<center>
+							利用先
+						</center>
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr bgcolor="#D3EBFF">
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr>
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr bgcolor="#D3EBFF">
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+			</tbody>
+		</table>
+	</center><!-- 素材利用 -->
+	<div class="topicbox" style="padding-bottom:5px;">
+		<div class="topic">
+			<center>
+				<span class="topiceng" style="border-bottom: solid 1px #5E5E5E;"><a id="3" name="3">ー Materials ー</a></span>
+			</center>
+			<center>
+				<span class="topicjpn">素材利用</span>
+			</center>
+		</div>
+	</div>
+	<center>
+		<table border="0" style="border-collapse: collapse; width:75%;">
+			<thead>
+				<tr bgcolor="#61D836">
+					<th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
+						<center>
+							サイト名
+						</center>
+					</th>
+					<th style="text-align:left;color:white;padding-top:10px;padding-bottom:10px;">
+						<center>
+							利用先
+						</center>
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr bgcolor="#D7F6CE">
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr>
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+				<tr bgcolor="#D7F6CE">
+					<td style="text-align:left">未記入</td>
+					<td style="text-align:left">未記入</td>
+				</tr>
+			</tbody>
+		</table>
+	</center><!-- サイト構成 -->
+	<div class="sitekousei">
+		<br>
+		<div class="siteboxall">
+			<div class="sitebox1">
+				<a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
+				&nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
+				&nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
+			</div>
+			<div class="sitebox2">
+				<br>
+				&nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
+				&nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
+			</div>
+			<div class="sitebox3">
+				<br>
+				&nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br>
+				<br>
+				&nbsp;<a href="tour.html" style="color: white;font-weight: bold;">■サイトツアー</a><br>
+				<br>
+				&nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
+			</div>
+			<div class="sitebox4">
+				<br>
+				&nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
+				&nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
+				&nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
+				<br>
+				&nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
+			</div>
+		</div>
+	</div><!-- topボタン -->
+	<center>
+		<a class="totop"><img onclick="$('body, html').animate({scrollTop: 0}, 400, 'swing');" src="../img/totop.png"></a>
+	</center><!-- フッター -->
+	<footer class="footer">
+		<p class="cr">Copyright 2017 Internet Security</p>
+	</footer>
+</body>
 </html>
