--- a/pages/sns.html
+++ b/pages/sns.html
@@ -1,185 +1,163 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>SNSを正しく使おう！</title>
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <script src="../jquery.js"></script>
-    <script src="../info.js"></script>
-    <script src="../scroll.js"></script>
-  </head>
-  <body>
-    <!-- グローバルナビ -->
-    <div class="head">
-    <div class="topiconbox">
-    <div class="topicon">
-    <h1>
-      <a href="../index.html">
-        <img src="../img/topicon.png" alt="Internet Security" width="240px" height="100px">
-      </a>
-    </h1>
-    </div>
-    </div>
-    <div class="topnavbox">
-    <nav class="topnav">
-      <ul>
-        <li class="topbutton">
-          <a href="whatis.html">
-            <span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span>
-          </a>
-        </li>
-        <li class="topbutton">
-          <a href="sitemap.html">
-            <span style="border-bottom: solid 3px #ffffff;">サイトマップ</span>
-          </a>
-        </li>
-        <li class="topbutton">
-          <a href="info.html">
-            <span style="border-bottom: solid 3px #ffffff;">サイト情報</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    </div>
-    <div class="topengbox">
-    <a href="eng.html" class="topeng">English</a>
-    </div>
-    </div>
-    <br>
-    <!--記事-->
-    <center>
-      <div class="pagebox">
-      <div class="pagetop">
-      <a style="color: red;">SNS</a>を正しく使おう！
-      </div>
-      <br>
-      <center>
-        <div class="pagearticlebox">LINE、Twitter、Facebookなどの
-        <a style="color: red;">SNS</a>(ソーシャル ネットワーキング サービス)はメッセージなどを通して友人や知人、共通の趣味を持つ人たちといつでもどこでもコミュニケーションができるサービスです。そんな便利なサービスの裏側で、様々な
-        <a style="color: red;">問題</a>が起きています。
-        </div>
-      </center>
-      <br>
-      <center>
-        <div class="pagearticlebox">
-        <div class="pagetop2">
-        <a style="color: red;" name="1">位置情報</a>問題
-        </div>
-        <br>
-          SNSの投稿で自分の現在地を他者に知られてしまい
-          <a style="color: red;">大ごと</a>になる可能性があります。
-          <br>
-          <br>例えば「友達の家でパーティーなう」といった投稿に位置情報をつけたら、それは「ここに友達の家があります」といっているようなものです。もしかしたら、いきなり見ず知らずの人が、家を訪ねてくるかもしれません。
-          <br>
-          <br>もっと
-          <a style="color: red;">恐ろしい例</a>を挙げると、家で「明日から旅行！」といった投稿を位置情報をつけて投稿するとします。あなたが留守と知った空き巣があなたの家に盗みに入るかもしれません。
-          <br>
-          <br>SNSでの投稿といった軽はずみの行動が自分だけではなく友達やその家族にまで
-          <a style="color: red;">迷惑</a>をかける可能性があります。なので位置情報をつけるときには十分
-          <a style="color: red;">注意</a>してください。
-        <div class="pro">
-        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
-        </div>
-        <div class="pro2">写真自体の位置情報添付を
-        <a style="color: red;">オフ</a>にする
-        </div>
-        <center>
-          <div class="pagearticlebox2">写真にはその写真がどこで撮られたかを示す位置情報が含まれている場合があります。スマホの設定で位置情報添付をオフにしましょう。 
-          </div>
-        </center>
-        <br>
-        <div class="pro2">SNS投稿の際、位置情報
-        <a style="color: red;">添付</a>をしない
-        </div>
-        <center>
-          <div class="pagearticlebox2">SNS投稿をする際、位置情報をつけることができる場合があります。位置情報をつけても良いか慎重に判断しましょう。 
-          </div>
-        </center>
-        <br>
-        <br>
-        <div class="pagetop2">
-        <a style="color: red;" name="2">詐欺</a>問題
-        </div>
-        <br>
-        SNSでも電子メールと同じように、詐欺などの
-        <a style="color: red;">被害</a>が多くなってきています。例えば、Twitterのタイムラインで流れてきた広告のリンクをクリックしたら、
-        <a style="color: red;">高額な請求</a>や
-        <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
-        <div class="pro">
-        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
-        </div>
-        <div class="pro2">ブラウザの
-        <a style="color: red;">フィルタリング</a>をオンにする
-        </div>
-        <center>
-          <div class="pagearticlebox2">スマホやパソコンには有害なサイトをブロックするフィルタリングという機能があります。設定でフィルタリング機能をオンにしましょう。 
-          </div>
-        </center>
-        <br>
-        <div class="pro2">安易にリンクを
-        <a style="color: red;">クリック</a>しない
-        </div>
-        <center>
-          <div class="pagearticlebox2">SNSでは情報を自分で判断することがとても大事です。少しでも怪しいと思ったら無視するようにしましょう。 
-          </div>
-        </center>
-        <br>
-        <br>
-        <div class="pagetop2">
-        <a style="color: red;" name="3">偽情報・誤報</a>問題
-        </div><br>
-        最近ネット上で嘘の情報が拡散され世間を困らせています。
-        <div class="pro">
-        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
-        </div>
-        <div class="pro2">情報リテラシーを身につける</div>
-        <center>
-          <div class="pagearticlebox2">
-            未記入
-          </div>
-        </center>
-        <br>
-        <div class="pro2">
-          未記入
-        </div>
-        <center>
-          <div class="pagearticlebox2">
-            未記入
-          </div>
-        </center>
-        <br>
-        <br>
-        <div class="pagetop2">
-        <a style="color: red;" name="4">中傷</a>問題
-        </div>
-        <br>
-          <div class="pagearticlebox2">未記入
-
-        <div class="pro">
-        <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
-        </div>
-        <div class="pro2">
-          未記入
-        </div>
-        <center>
-          <div class="pagearticlebox2">
-            未記入
-          </div>
-        </center>
-        <br>
-        <div class="pro2">
-          未記入
-        </div>
-        <center>
-          <div class="pagearticlebox2">
-            未記入
-          </div>
-        </center>
-        <br>
-        <br>
-        </div>
-      </center>
-      <div class="matomebox">
+<head>
+	<meta charset="UTF-8">
+	<title>SNSを正しく使おう！</title>
+	<link href="../style.css" rel="stylesheet" type="text/css">
+	<script src="../jquery.js">
+	</script>
+	<script src="../info.js">
+	</script>
+	<script src="../scroll.js">
+	</script>
+</head>
+<body>
+	<!-- グローバルナビ -->
+	<div class="head">
+		<div class="topiconbox">
+			<div class="topicon">
+				<h1><a href="../index.html"><img alt="Internet Security" height="100px" src="../img/topicon.png" width="240px"></a></h1>
+			</div>
+		</div>
+		<div class="topnavbox">
+			<nav class="topnav">
+				<ul>
+					<li class="topbutton">
+						<a href="whatis.html"><span style="border-bottom: solid 3px #ffffff;">Internet Securityとは</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="sitemap.html"><span style="border-bottom: solid 3px #ffffff;">サイトマップ</span></a>
+					</li>
+					<li class="topbutton">
+						<a href="info.html"><span style="border-bottom: solid 3px #ffffff;">サイト情報</span></a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		<div class="topengbox">
+			<a class="topeng" href="eng.html">English</a>
+		</div>
+	</div><br>
+	<!--記事-->
+	<center>
+		<div class="pagebox">
+			<div class="pagetop">
+				<a style="color: red;">SNS</a>を正しく使おう！
+			</div><br>
+			<center>
+				<div class="pagearticlebox">
+					LINE、Twitter、Facebookなどの <a style="color: red;">SNS</a>(ソーシャル ネットワーキング サービス)はメッセージなどを通して友人や知人、共通の趣味を持つ人たちといつでもどこでもコミュニケーションができるサービスです。そんな便利なサービスの裏側で、様々な <a style="color: red;">問題</a>が起きています。
+				</div>
+			</center><br>
+			<center>
+				<div class="pagearticlebox">
+					<div class="pagetop2">
+						<a id="1" name="1" style="color: red;">位置情報</a>問題
+					</div><br>
+					SNSの投稿で自分の現在地を他者に知られてしまい <a style="color: red;">大ごと</a>になる可能性があります。<br>
+					<br>
+					例えば「友達の家でパーティーなう」といった投稿に位置情報をつけたら、それは「ここに友達の家があります」といっているようなものです。もしかしたら、いきなり見ず知らずの人が、家を訪ねてくるかもしれません。<br>
+					<br>
+					もっと <a style="color: red;">恐ろしい例</a>を挙げると、家で「明日から旅行！」といった投稿を位置情報をつけて投稿するとします。あなたが留守と知った空き巣があなたの家に盗みに入るかもしれません。<br>
+					<br>
+					SNSでの投稿といった軽はずみの行動が自分だけではなく友達やその家族にまで <a style="color: red;">迷惑</a>をかける可能性があります。なので位置情報をつけるときには十分 <a style="color: red;">注意</a>してください。
+					<div class="pro">
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+					</div>
+					<div class="pro2">
+						写真自体の位置情報添付を <a style="color: red;">オフ</a>にする
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							写真にはその写真がどこで撮られたかを示す位置情報が含まれている場合があります。スマホの設定で位置情報添付をオフにしましょう。
+						</div>
+					</center><br>
+					<div class="pro2">
+						SNS投稿の際、位置情報 <a style="color: red;">添付</a>をしない
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							SNS投稿をする際、位置情報をつけることができる場合があります。位置情報をつけても良いか慎重に判断しましょう。
+						</div>
+					</center><br>
+					<br>
+					<div class="pagetop2">
+						<a id="2" name="2" style="color: red;">詐欺</a>問題
+					</div><br>
+					SNSでも電子メールと同じように、詐欺などの <a style="color: red;">被害</a>が多くなってきています。例えば、Twitterのタイムラインで流れてきた広告のリンクをクリックしたら、 <a style="color: red;">高額な請求</a>や <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
+					<div class="pro">
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+					</div>
+					<div class="pro2">
+						ブラウザの <a style="color: red;">フィルタリング</a>をオンにする
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							スマホやパソコンには有害なサイトをブロックするフィルタリングという機能があります。設定でフィルタリング機能をオンにしましょう。
+						</div>
+					</center><br>
+					<div class="pro2">
+						安易にリンクを <a style="color: red;">クリック</a>しない
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							SNSでは情報を自分で判断することがとても大事です。少しでも怪しいと思ったら無視するようにしましょう。
+						</div>
+					</center><br>
+					<br>
+					<div class="pagetop2">
+						<a id="3" name="3" style="color: red;">偽情報・誤報</a>問題
+					</div><br>
+					最近ネット上で嘘の情報が拡散され世間を困らせています。
+					<div class="pro">
+						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+					</div>
+					<div class="pro2">
+						情報リテラシーを身につける
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							未記入
+						</div>
+					</center><br>
+					<div class="pro2">
+						未記入
+					</div>
+					<center>
+						<div class="pagearticlebox2">
+							未記入
+						</div>
+					</center><br>
+					<br>
+					<div class="pagetop2">
+						<a id="4" name="4" style="color: red;">中傷</a>問題
+					</div><br>
+					<div class="pagearticlebox2">
+						未記入
+						<div class="pro">
+							<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
+						</div>
+						<div class="pro2">
+							未記入
+						</div>
+						<center>
+							<div class="pagearticlebox2">
+								未記入
+							</div>
+						</center><br>
+						<div class="pro2">
+							未記入
+						</div>
+						<center>
+							<div class="pagearticlebox2">
+								未記入
+							</div>
+						</center><br>
+						<br>
+					</div>
+				</div>
+			</center>
+			<div class="matomebox">
 				<div class="matometitle">
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
@@ -187,67 +165,74 @@
 					未記入
 				</div>
 			</div>
-      </div>
-    </center>
-    <!-- サイト構成 -->
-    <div class="sitekousei"><br>
-      <div class="siteboxall">
-      <div class="sitebox1">
-        <a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
-        &nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
-        &nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
-      </div>
-      <div class="sitebox2"><br>
-        &nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
-        &nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
-      </div>
-      <div class="sitebox3"><br>
-        &nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
-        &nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
-      </div>
-      <div class="sitebox4"><br>
-        &nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
-        &nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
-        &nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
-      </div>
-      </div>
-    </div>
-    <!-- topボタン -->
-    <center>
-      <a class="totop">
-        <img src="../img/totop.png" onClick="$('body, html').animate({scrollTop: 0}, 400, 'swing');">
-      </a>
-    </center>
-    <!-- フッター -->
-    <footer class="footer">
-      <p class="cr">Copyright 2017 Internet Security </p>
-    </footer>
-  </body>
+			<hr noshade width="70%">
+			<center>
+				次のページ
+			</center>
+			<center>
+				<a class="nextpage" href="com.html">会社の情報を守ろう！</a>
+			</center><br>
+		</div>
+	</center><!-- サイト構成 -->
+	<div class="sitekousei">
+		<br>
+		<div class="siteboxall">
+			<div class="sitebox1">
+				<a href="../index.html" style="color: white;font-weight: bold;">■TOP</a><br>
+				&nbsp;<a href="pc.html" style="color: white;font-weight: bold;">□自分のパソコンを守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="priv.html" style="color: white;font-weight: bold;">□個人情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
+				&nbsp;<a href="badsite.html" style="color: white;font-weight: bold;">□悪質サイトに気をつけよう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
+			</div>
+			<div class="sitebox2">
+				<br>
+				&nbsp;<a href="sns.html" style="color: white;font-weight: bold;">□SNSを正しく使おう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
+				&nbsp;<a href="com.html" style="color: white;font-weight: bold;">□会社の情報を守ろう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+				&nbsp;<a href="iot.html" style="color: white;font-weight: bold;">□IoTにもセキュリティ？</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
+			</div>
+			<div class="sitebox3">
+				<br>
+				&nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br>
+				<br>
+				&nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
+			</div>
+			<div class="sitebox4">
+				<br>
+				&nbsp;<a href="whatis.html" style="color: white;font-weight: bold;">■InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
+				&nbsp;<a href="info.html" style="color: white;font-weight: bold;">■サイト情報</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
+				&nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
+				&nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
+			</div>
+		</div>
+	</div><!-- topボタン -->
+	<center>
+		<a class="totop"><img onclick="$('body, html').animate({scrollTop: 0}, 400, 'swing');" src="../img/totop.png"></a>
+	</center><!-- フッター -->
+	<footer class="footer">
+		<p class="cr">Copyright 2017 Internet Security</p>
+	</footer>
+</body>
 </html>
