--- a/pages/tour.html
+++ b/pages/tour.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>会社の情報を守ろう！</title>
+	<title>クイズ！</title>
 	<link href="../style.css" rel="stylesheet" type="text/css">
 	<script src="../jquery.js">
 	</script>
@@ -39,16 +39,22 @@
 		</div>
 	</div><br>
 	<!--記事-->
+	<center>
 	<div class="pagebox">
-		未記入
+		<a>『インターネットに潜む危険』へようこそ！</a><br>
+		<a>このサイトではインターネットの恐ろしさを知ることができます！</a><br>
+		<a>このサイトを見ればあなたはセキュリティ博士です！！</a><br>
+		<a>それではツアーを始めましょう！</a><br>
 		<hr noshade width="70%">
 		<center>
-			次のページ
+			最初のページ
 		</center>
 		<center>
-			<a class="nextpage" href="badsite.html">個人情報を守ろう！</a>
+			<a class="nextpage" href="pc.html">自分のパソコンを守ろう！</a>
 		</center><br>
+		
 	</div>
+	</center>
 	<!-- サイト構成 -->
 	<div class="sitekousei">
 		<br>
@@ -87,8 +93,6 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br>
 				<br>
-				&nbsp;<a href="tour.html" style="color: white;font-weight: bold;">■サイトツアー</a><br>
-				<br>
 				&nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
 			</div>
 			<div class="sitebox4">
@@ -102,7 +106,6 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
 				&nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
-				<br>
 				&nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
 			</div>
 		</div>
